@startuml
hide circle
skinparam classAttributeIconSize 0

package "Storage Component" as STORAGE_PKG {

    class StorageManager {
      - {static} DIRECTORY : String = "data"
      - {static} FILE_NAME : String = "appdata.ser"
      --
      + {static} saveExpenseManager(expenseManager : ExpenseManager, ui : Ui) : void
      + {static} loadExpenseManager(ui : Ui) : ExpenseManager
    }
}


package "Model Component" as MODEL_PKG {
    class Serializable <<external>> <<interface>> {
    }

    class ExpenseManager implements Serializable {
      - {static} serialVersionUID : long = 1L
    }

    class Expense implements Serializable {
      - {static} serialVersionUID : long = 1L
    }
}

package "UI Component" {
    class Ui {
    }
}

StorageManager ..> ExpenseManager : uses
StorageManager ..> Ui : uses
ExpenseManager "1" *-- "0..*" Expense : contains

note right of Serializable
  Java standard interface
  for object serialization
end note

note bottom of StorageManager
  Handles persistence using
  Java serialization (ObjectOutputStream
  and ObjectInputStream)
end note

note bottom of ExpenseManager
  Implements Serializable to enable
  saving/loading via StorageManager.
  Contains serialVersionUID for
  version control.
end note

note bottom of Expense
  Implements Serializable as part
  of the ExpenseManager object graph.
  Must be serializable since it's
  stored in ExpenseManager's list.
end note

@enduml